build(webui): Add `icons:generate` script

--- a/webui/app/package.json
+++ b/webui/app/package.json
@@ -8,8 +8,9 @@
     "build": "yarn vinxi build",
     "build:client": "yarn vinxi build --mode client",
     "build:server": "yarn vinxi build --mode server",
-    "dev": "yarn vinxi dev",
+    "dev": "yarn icons:generate && yarn vinxi dev",
     "start": "yarn vinxi start",
+    "icons:generate": "node scripts/generate-icon-manifest.ts",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint src --ext .ts,.tsx,.js,.jsx --fix",
     "format": "prettier --write src/**/*.{ts,tsx,js,jsx,json}",
