--- a/.envrc
+++ b/.envrc
@@ -10,4 +10,6 @@ if [ ! -d "third-party/codex/.git" ]; then
   git submodule update --init --recursive
 fi
 
+dotenv_if_exists
+
 use flake . --accept-flake-config
