--- a/crates/agentfs-interpose-shim/Cargo.toml
+++ b/crates/agentfs-interpose-shim/Cargo.toml
@@ -23,6 +23,9 @@ redhook = "2.0"
 agentfs-proto = { path = "../agentfs-proto" }
 tempfile = "3"
 agentfs-core = { path = "../agentfs-core", optional = true }
+
+# macOS-specific dependencies
+[target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.10"
 core-foundation-sys = "0.8"
 scopeguard = "1.2"
