build(cargo): Vendor `tui-textarea` through cargo and promote it to a workspace dep
Co-authored-by: reo101 <pavel.atanasov2001@gmail.com>

--- a/crates/ah-recorder/Cargo.toml
+++ b/crates/ah-recorder/Cargo.toml
@@ -29,7 +29,7 @@ brotli = "7.0"
 byteorder = "1.5"
 ratatui = { workspace = true }
 crossterm = { workspace = true }
-tui-textarea = { path = "../../vendor/tui-textarea", features = ["search"] }
+tui-textarea = { workspace = true }
 
 # SSZ serialization for IPC
 ethereum_ssz = { workspace = true }
