--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -17,6 +17,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
 tempfile = "3.0"
+crossterm = { workspace = true }
 
 [features]
 default = ["tmux"]
