chore(insta): ignore .snap.new globally
- Add `*.snap.new` to root .gitignore to prevent accidental commits of Insta review artifacts across the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,7 @@ webui/e2e-tests/browsers/
 # WebUI development files
 webui/app/.vite/
 webui/mock-server/dist/
+
+# Insta snapshot review files (do not commit)
+*.snap.new
 webui/shared/dist/
