--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       matrix:
         include:
           - name: x86_64-linux (NixOS, self-hosted)
-            runner: [self-hosted, nixos, x86-64-v3]
+            runner: [self-hosted, nixos, x86-64-v3, microvm]
             allowedToFail: false
           - name: aarch64-darwin (macOS, GitHub-hosted)
             runner: macos-latest
