--- a/tests/agentfs-daemon-backstore-integration/Cargo.toml
+++ b/tests/agentfs-daemon-backstore-integration/Cargo.toml
@@ -1,3 +1,6 @@
+# Copyright 2025 Schelling Point Labs Inc
+# SPDX-License-Identifier: AGPL-3.0-only
+
 [package]
 name = "agentfs-daemon-backstore-integration"
 version = "0.1.0"
@@ -16,7 +19,7 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 thiserror = { workspace = true }
 libc = { workspace = true }
+ssz = { package = "ethereum_ssz", version = "0.8" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 agentfs-interpose-e2e-tests = { path = "../../crates/agentfs-interpose-e2e-tests" }
-
