--- a/webui/app/package.json
+++ b/webui/app/package.json
@@ -52,6 +52,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@livestore/livestore": "^0.3.0",
+    "@livestore/solid": "^0.3.0",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
