--- a/crates/ah-fs-snapshots-daemon/Cargo.toml
+++ b/crates/ah-fs-snapshots-daemon/Cargo.toml
@@ -14,6 +14,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
+libc = "0.2"
 
 # SSZ serialization (TODO: implement proper SSZ)
 ethereum_ssz = { workspace = true }
