--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,8 +82,27 @@ jobs:
 
     steps:
       - name: Test user namespace availability
+        run: unshare -U true && echo "✅ userns OK" || echo "❌ userns blocked"
+
+      - name: Test passwordless `sudo` availability
+        run: sudo true && echo "✅ sudo OK" || echo "❌ sudo blocked"
+
+      - name: Investigate sudo
         run: |
-          unshare -U true && echo "✅ userns OK" || echo "❌ userns blocked"
+          set -x
+          ls -l "$(command -v sudo)"
+          id
+          whoami
+          sudo whoami || true
+          grep -E 'NoNewPrivs|CapEff|CapBnd' /proc/self/status || true
+          mount | grep " on /run " || true
+          mount | grep " on /run/wrappers" || true
+          grep -E '^(NoNewPrivs|CapEff|CapBnd|Seccomp)' /proc/self/status
+          echo "-- uid/gid maps (user namespace check) --"
+          cat /proc/self/uid_map /proc/self/gid_map 2>/dev/null || true
+
+      - name: Test passwordless `sudo` availability
+        run: sudo true && echo "✅ sudo OK" || echo "❌ sudo blocked"
 
       - uses: actions/checkout@v5
         with:
@@ -102,25 +121,25 @@ jobs:
           direnv allow .
           direnv export gha > "$GITHUB_ENV"
 
-      # FIXME: Integrate clippy in pre-commit and move to `lint` job
-      # - name: Check code with clippy
-      #   run: just lint-rust
+      - name: Run sandbox-fs tests to fail-fast check the CI runner permissions
+        run: |
+          cargo test -p sandbox-fs
 
       - name: Check compilation
         run: just check
 
+      - name: Build sandbox helper binary
+        run: just build-sbx-helper-release
+
       - name: Build cgroup enforcement test binaries
         run: just build-cgroup-tests
 
-      - run: sudo just create-test-filesystems
-
-      - run: sudo just start-ah-fs-snapshots-daemon
+      # - run: sudo just create-test-filesystems
+      #
+      # - run: sudo just start-ah-fs-snapshots-daemon
 
       - name: Run tests
         run: just test-rust-verbose
-
-      - name: Build sandbox helper binary
-        run: just build-sbx-helper-release
 
   webui:
     runs-on: [self-hosted, nixos, x86-64-v3]
