fix(ah-mux): resolve build errors for kitty and all multiplexer features
- Fixed duplicate module declarations and imports in lib.rs
- Corrected type errors in kitty.rs where split_pane() expected Option<&WindowId>
- Fixed type handling in screen.rs and zellij.rs for Option<&WindowId> parameters
- Applied clippy suggestions: replaced map_or with is_ok_and, ok_or_else with ok_or
- Optimized iterator patterns: replaced iter().copied().collect() with .to_vec()
- Removed unused imports and fixed unused variable warnings
- Expanded default features to include kitty, neovim, emacs, screen, vim, wezterm, zellij

All features now build successfully with no warnings in both debug and release modes.

--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -20,7 +20,16 @@ tempfile = "3.0"
 crossterm = { workspace = true }
 
 [features]
-default = ["tmux"]
+default = [
+  "tmux",
+  "kitty",
+  "neovim",
+  "emacs",
+  "screen",
+  "vim",
+  "wezterm",
+  "zellij",
+]
 tmux = []
 kitty = []
 wezterm = []
