--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -82,6 +82,7 @@ crossterm = { workspace = true }
 tempfile = { workspace = true }
 dirs = "5.0"
 ureq = "2.9"
+which = "6.0"
 
 # Platform-specific dependencies
 [target.'cfg(unix)'.dependencies]
