--- a/crates/ah-agents/Cargo.toml
+++ b/crates/ah-agents/Cargo.toml
@@ -44,6 +44,7 @@ tempfile = "3.8"
 ah-repo = { path = "../ah-repo" }
 reqwest = { version = "0.12", features = ["json"] }
 llm-api-proxy = { path = "../llm-api-proxy" }
+serial_test = "3"
 
 [features]
 default = ["claude", "codex", "cursor-cli", "copilot-cli", "gemini"]
