feat(ah-core, ah-mux): add feature flags for all multiplexer backends
Add comprehensive feature flag support to enable conditional compilation
of multiplexer backends, improving build flexibility and binary size.

Changes:
- Add feature flags to ah-mux for all 13 multiplexer backends
- Propagate feature flags from ah-core to ah-mux dependency
- Include iterm2, ghostty, tilix, and windows-terminal in default features
- Enable selective compilation based on target platform and features

Rationale:
Feature flags allow users to:
1. Build only the multiplexers they need, reducing binary size
2. Avoid compilation errors on unsupported platforms
3. Enable explicit error handling when features are disabled
4. Support platform-specific backends (iTerm2 on macOS, Tilix on Linux)

This sets the foundation for the multiplexer backend expansion that
adds support for all ah_mux backends beyond just Tmux and iTerm2.

--- a/crates/ah-core/Cargo.toml
+++ b/crates/ah-core/Cargo.toml
@@ -41,3 +41,32 @@ ethereum_ssz_derive = { workspace = true }
 # Aliases for SSZ crates (matching recorder pattern)
 ssz = { package = "ethereum_ssz", version = "0.8" }
 ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }
+
+[features]
+default = [
+  "tmux",
+  "kitty",
+  "neovim",
+  "emacs",
+  "screen",
+  "vim",
+  "wezterm",
+  "zellij",
+  "iterm2",
+  "ghostty",
+  "tilix",
+  "windows-terminal",
+]
+# Propagate multiplexer features to ah-mux
+tmux = ["ah-mux/tmux"]
+kitty = ["ah-mux/kitty"]
+wezterm = ["ah-mux/wezterm"]
+zellij = ["ah-mux/zellij"]
+screen = ["ah-mux/screen"]
+ghostty = ["ah-mux/ghostty"]
+tilix = ["ah-mux/tilix"]
+windows-terminal = ["ah-mux/windows-terminal"]
+vim = ["ah-mux/vim"]
+neovim = ["ah-mux/neovim"]
+emacs = ["ah-mux/emacs"]
+iterm2 = ["ah-mux/iterm2"]
