--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -51,7 +51,7 @@ emacs = []
 tokio-test = "0.4"
 expectrl = { version = "0.3", features = ["async"] }
 futures-lite = "1.13"
-vt100 = { path = "../../vendor/vt100" }
+vt100 = { workspace = true }
 insta = { version = "1.40", features = ["json"] }
 anyhow = "1.0"
 serde_json = "1.0"
