--- a/crates/ah-recorder/Cargo.toml
+++ b/crates/ah-recorder/Cargo.toml
@@ -24,7 +24,7 @@ ah-domain-types = { path = "../ah-domain-types" }
 
 # Recording-specific dependencies
 portable-pty = "0.8"
-vt100 = { path = "../../vendor/vt100" }
+vt100 = { workspace = true }
 brotli = "7.0"
 byteorder = "1.5"
 ratatui = { workspace = true }
