--- a/crates/ah-tui/Cargo.toml
+++ b/crates/ah-tui/Cargo.toml
@@ -53,7 +53,7 @@ ssz_rs = "0.9"
 interprocess = { version = "2.0", features = ["tokio"] }
 ethereum_ssz = { workspace = true }
 ethereum_ssz_derive = { workspace = true }
-vt100 = { path = "../../vendor/vt100" }
+vt100 = { workspace = true }
 
 # Aliases for SSZ crates (matching recorder pattern)
 ssz = { package = "ethereum_ssz", version = "0.8" }
@@ -66,6 +66,5 @@ ah-rest-mock-client = { path = "../ah-rest-mock-client" }
 url = { workspace = true }
 tui-testing = { path = "../tui-testing" }
 expectrl = "0.3"
-vt100 = { path = "../../vendor/vt100" }
 insta = { version = "1.40", features = ["json"] }
 regex = "1.0"
