fix(ah-fs-snapshots/cargo): Re-export ah-fs-snapshots feature flags
- Split the zfs/btrfs/git features to re-export named ah-fs-snapshots-*
  flags while those map to the optional deps via dep:.
- Allows dependents to enable specific subsystem features directly while
  keeping defaults referencing those aliases.

Fixes the following command:

  nix build --json .#ah

--- a/crates/ah-fs-snapshots/Cargo.toml
+++ b/crates/ah-fs-snapshots/Cargo.toml
@@ -36,9 +36,9 @@ fs-snapshots-test-harness = { path = "../../tests/fs-snapshots-test-harness", de
 
 [features]
 default = ["zfs", "btrfs", "git"]
-zfs = ["dep:ah-fs-snapshots-zfs"]
-btrfs = ["dep:ah-fs-snapshots-btrfs"]
-git = ["dep:ah-fs-snapshots-git"]
+zfs = ["ah-fs-snapshots-zfs"]
+btrfs = ["ah-fs-snapshots-btrfs"]
+git = ["ah-fs-snapshots-git"]
 agentfs = [
   "dep:agentfs-daemon",
   "dep:agentfs-proto",
