feat(ah-logging): Introduce a shared create implementing the shared logging policies of the Agent Harbor software suite

--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -26,6 +26,8 @@ ratatui = "0.29"
 
 # AH core dependencies
 ah-core = { path = "../ah-core" }
+ah-domain-types = { path = "../ah-domain-types" }
+ah-logging = { path = "../ah-logging" }
 ah-repo = { path = "../ah-repo" }
 ah-local-db = { path = "../ah-local-db" }
 config-core = { path = "../config-core" }
