--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
   "crates/ah-core",
   "crates/ah-gui-core",
   "crates/ah-local-db",
+  "crates/ah-logging",
   "crates/ah-repo",
   "crates/ah-workflows",
   "crates/ah-fs-snapshots",
