--- a/crates/ah-domain-types/Cargo.toml
+++ b/crates/ah-domain-types/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
+clap = { workspace = true, features = ["derive"] }
+tracing = { workspace = true }
 utoipa = { version = "4.0", optional = true }
 
 [features]
