--- a/crates/sbx-helper/Cargo.toml
+++ b/crates/sbx-helper/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+ah-logging = { path = "../ah-logging" }
 clap = { workspace = true }
 anyhow = { workspace = true }
 
