--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -4,5 +4,12 @@
   "license": "ISC",
   "engines": {
     "node": ">=22"
+  },
+  "dependencies": {
+    "next": "^16.0.3",
+    "nextra": "^4.6.0",
+    "nextra-theme-docs": "^4.6.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
