--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -5,6 +5,11 @@
   "engines": {
     "node": ">=22"
   },
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "next": "^16.0.3",
     "nextra": "^4.6.0",
