feat(ah-fs-snapshots,agentfs): AgentFS can now act as FS snapshots provider
Other changes:

The FS snapshot providers test suite was extended with additional
tests that were not ported from the Ruby test suite in the past.

The suite was refactored to rely on an external process in order
for us to be able to launch it with the AgentFS interpose shim

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ members = [
   # AgentFS crates
   "crates/agentfs-core",
   "crates/agentfs-proto",
+  "crates/agentfs-client",
   "crates/agentfs-fuse-host",
   "crates/agentfs-winfsp-host",
   "crates/agentfs-fskit-host",
@@ -73,6 +74,7 @@ members = [
   "tests/vm-enforcement",
   "tests/agentfs-daemon-backstore-integration",
   "tests/tools/mock-tui-dashboard",
+  "tests/fs-snapshots-test-harness",
   "crates/agentfs-interpose-shim",
   "crates/agentfs-interpose-e2e-tests",
   "crates/agentfs-daemon",
