--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -16,5 +16,8 @@
     "nextra-theme-docs": "^4.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
+  },
+  "devDependencies": {
+    "pagefind": "^1.4.0"
   }
 }
