--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -7,8 +7,9 @@
   },
   "scripts": {
     "dev": "next --webpack",
-    "build": "next build --webpack",
-    "start": "next start"
+    "build": "next build --webpack && yarn build:pagefind",
+    "start": "next start",
+    "build:pagefind": "pagefind --site .next/server/app --output-path public/_pagefind"
   },
   "dependencies": {
     "next": "^16.0.3",
