refactor(model-selection): More consistent handling of agent/model selection based on a new shared type in ah-domain-types

--- a/crates/ah-config-types/Cargo.toml
+++ b/crates/ah-config-types/Cargo.toml
@@ -9,5 +9,6 @@ description = "Distributed, strongly-typed configuration structs for Agent Harbo
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+ah-domain-types = { path = "../ah-domain-types" }
 serde.workspace = true
 schemars = { version = "0.8", features = ["preserve_order"] }
