--- a/crates/ah-domain-types/Cargo.toml
+++ b/crates/ah-domain-types/Cargo.toml
@@ -7,11 +7,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+schemars = "0.8"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 chrono = "0.4"
 clap = { workspace = true, features = ["derive"] }
 tracing = { workspace = true }
 utoipa = { version = "4.0", optional = true }
+validator = { version = "0.18", features = ["derive"] }
 
 [features]
 default = []
