--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -12,11 +12,14 @@
     "build:pagefind": "pagefind --site .next/server/app --output-path public/_pagefind"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "next": "^16.0.3",
     "nextra": "^4.6.0",
     "nextra-theme-docs": "^4.6.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "pagefind": "^1.4.0"
