--- a/crates/ah-core/Cargo.toml
+++ b/crates/ah-core/Cargo.toml
@@ -37,6 +37,7 @@ url = "2.5"
 interprocess = { version = "2.0", features = ["tokio"] }
 ethereum_ssz = { workspace = true }
 ethereum_ssz_derive = { workspace = true }
+fst = "0.4"
 
 # Aliases for SSZ crates (matching recorder pattern)
 ssz = { package = "ethereum_ssz", version = "0.8" }
