feat(fuse): add control-plane harness Overlay work introduced `agentfs-control-cli` to talk to `.agentfs/control`, plus a `just test-fuse-control-plane` script that mounts AgentFS, issues snapshot/branch/bind IOCTLs, and logs `logs/fuse-control-plane-20251115-113550` for F4. IOCTL framing gained a length prefix so the CLI and AH client can decode responses reliably. FUSE status doc references the new run.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ members = [
   # AgentFS crates
   "crates/agentfs-core",
   "crates/agentfs-proto",
+  "crates/agentfs-control-cli",
   "crates/agentfs-client",
   "crates/agentfs-fuse-host",
   "crates/agentfs-winfsp-host",
